--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_bWFzc2l2ZS1qYXktMzUuY2xlcmsuYWNjb3VudHMuZGV2JA
+# CLERK_SIGN_IN_URL="http://localhost:3000/home"
+# CLERK_SIGN_UP_URL="http://localhost:3000/home"
