--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_bWFzc2l2ZS1qYXktMzUuY2xlcmsuYWNjb3VudHMuZGV2JA
+REACT_APP_BACKEND_DOMAIN=https://krushigram-backend.onrender.com 
 # CLERK_SIGN_IN_URL="http://localhost:3000/home"
 # CLERK_SIGN_UP_URL="http://localhost:3000/home"
